--- a/package.json
+++ b/package.json
@@ -24,7 +24,6 @@
     "@soda/get-current-script": "^1.0.0",
     "@types/minimist": "^1.2.0",
     "@types/webpack-dev-server": "^3.11.0",
-    "@vue/cli-plugin-babel": "^4.5.9",
     "@vue/compiler-sfc": "^3.0.0-beta.14",
     "@vue/component-compiler-utils": "^3.1.2",
     "@vue/preload-webpack-plugin": "^1.1.0",
@@ -85,16 +84,18 @@
     "semver": "^7.3.2",
     "ssri": "^8.0.0",
     "strip-ansi": "^6.0.0",
-    "terser-webpack-plugin": "^2.3.6",
-    "thread-loader": "^2.1.3",
-    "url-loader": "^2.2.0",
-    "vue-loader": "^15.9.2",
+    "terser-webpack-plugin": "^4.2.3",
+    "thread-loader": "^3.0.0",
+    "url-loader": "^4.1.1",
+    "vue-loader": "^16.1.0",
+    "vue-loader-v15": "npm:vue-loader@^15.9.5",
     "vue-style-loader": "^4.1.2",
-    "webpack": "^4.0.0",
-    "webpack-bundle-analyzer": "^3.8.0",
+    "webpack": "^5.4.0",
+    "webpack-bundle-analyzer": "^4.1.0",
     "webpack-chain": "^6.4.0",
     "webpack-dev-server": "^3.11.0",
-    "webpack-merge": "^4.2.2"
+    "webpack-merge": "^5.4.0",
+    "webpack-virtual-modules": "^0.4.1"
   },
   "peerDependencies": {
     "@vue/compiler-sfc": "^3.0.0-beta.14"
